# sqlalchemy-psql-upsert

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
sqlalchemy_psql_upsert/: client.py
src/sqlalchemy_psql_upsert/: __init__.py  client.py  config.py  main.py
src/sqlalchemy_upsert/: config.py  main.py
tests/: test_client.py  test_main.py  tests.py
